src/test/deca/codegen/invalid/homemade/castFailed.res
1
ERROR : cannot cast A type object to B
